--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@ text-shadow: 2px;
 -------------------------------------------------- */
 footer {
     bottom:0;
+    border-radius: 5px;
     width:100%;
     height:60px;   
     background: #7DCCFF ;
@@ -82,13 +83,13 @@ footer {
 -------------------------------------------------- */
 }
 .contact {
-    text-align: right
+    text-align: right;
 }
 .contact li {
     display: inline;
     font-size: 12px;
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     padding-left: 10px;
     padding-right: 10px;
     text-shadow: 2px;
